# euroscipy.github.io

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  404.html  CNAME  EuroSciPy.lektorproject  Makefile  Pipfile  README.md  dev-requirements.txt  index.html  pelicanconf.py  pixi.toml  publishconf.py  pyproject.toml  requirements.txt  rsync-excludes.txt  write_key.py
.github/: CODEOWNERS
.lektor/: buildstate
2020/: about.html  code_of_conduct.html  faqs.html  finaid.html  index.html  privacy.html  program.html  sponsoring.html  venue.html
2022/: about.html  accepted_talks.html  childcare.html  code_of_conduct.html  contact_us.html  covid_policy.html  current_sponsors.html  finaid.html  index.html  info.html  keynotes.html  maintainers.html  poster_session.html  program.html  program_menu.html  pyladies_lunch.html  report.html  schedule.html  social_event.html  sponsoring-terms.html  sponsoring.html  sponsors.html  sprint.html  tickets.html  venue.html
2023/: about.html  accepted_talks.html  childcare.html  code_of_conduct.html  contact_us.html  current_sponsors.html  finaid.html  index.html  info.html  keynotes.html  maintainers.html  organizers.html  poster_session.html  program.html  program_menu.html  schedule.html  social_event.html  sponsoring-terms.html  sponsoring.html  sponsors.html  sprint.html  tickets.html  venue.html  walking_tours.html
2024/: about.html  accepted_talks.html  boat_tour.html  childcare.html  code_of_conduct.html  contact_us.html  current_sponsors.html  featured_talks.html  finaid.html  index.html  info.html  keynotes.html  (+15 more)
(+687 files in other folders)
