[project]
name = "euroscipy"
version = "2.0.0"
description = "The website for the EuroSciPy event"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "pyyaml>=6.0.2",
    "pillow>=11.1.0,<12",
    "lektor>=3.3.12, <4",
    "pytanis>=0.8,<=0.9",
    "lektor-markdown-header-anchors>=0.3.1"
]

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",
    "W",
    "E302", # pycodestyle
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PL",   # pylint
    "TID",  # tidy
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
]
ignore = [
    "E501", # may cause conflicts with ruff formatter
    "W191",
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
